headline divider alignment correction

--- a/styles/Headline.module.css
+++ b/styles/Headline.module.css
@@ -23,6 +23,9 @@ Headline Component Styling
 .description {
     margin: 2% 0;
 }
+.hlDivider{
+    align-self: center;
+}
 
 /*****************
 Media Query
